# rhai-plugin-test

./: Cargo.toml
src/: builtins.rhai  default.rhai  lib.rs  syntax_highlighting.rs
